doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Frameworks/jdk.framework/Versions/A/Contents/Home/bin/javadoc
-author
-version
-nodeprecated
-package
-noindex
-notree
-nohelp
-nonavbar
-source
1.8
-classpath
/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bluejcore.jar:/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/junit-4.8.2.jar:/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-core.jar:/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-device.jar:/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-gpio-extension.jar:/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/userlib/pi4j-service.jar:/Users/johnghantous/Developer/Java/calculator
-d
/Users/johnghantous/Developer/Java/calculator/doc
-encoding
UTF-8
-charset
UTF-8
-docletpath
/Users/johnghantous/Downloads/BlueJ 3.1.7/BlueJ.app/Contents/Resources/Java/bjdoclet.jar
-doclet
bluej.doclet.doclets.formats.html.HtmlDoclet
/Users/johnghantous/Developer/Java/calculator/CalculatorEngine.java
<---- end of javadoc command ---->
Loading source file /Users/johnghantous/Developer/Java/calculator/CalculatorEngine.java...
/Users/johnghantous/Developer/Java/calculator/CalculatorEngine.java:120: error: ')' expected
                    if(operation=="√ ") txtBox.setText(Double.toString(Math.sqrt(num1));
                                                                                       ^
1 error
